--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,9 +83,8 @@ main {
   z-index: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  width: 1200px;
   padding: 0 10px;
-  margin: 0 auto; }
+  margin: 0; }
   .page-body__container::after {
     content: "";
     position: absolute;
@@ -93,6 +92,7 @@ main {
     top: 0;
     bottom: 0;
     left: 130px;
+    right: 0;
     width: 2px;
     background-color: rgba(255, 255, 255, 0.58); }
 
@@ -189,8 +189,7 @@ main {
   margin-bottom: 35px; }
 
 .trip-main__trip-controls {
-  margin-top: 36px;
-  width: 600px; }
+  width: 100%; }
 
 .trip-main__event-add-btn {
   min-width: 170px;
@@ -206,9 +205,6 @@ main {
   -ms-flex-align: center;
       align-items: center;
   -ms-flex-pack: justify; }
-
-.trip-info__main {
-  width: 600px; }
 
 .trip-info__title {
   margin: 0;
@@ -274,7 +270,7 @@ main {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -ms-flex-align: start;
-      align-items: flex-start; }
+      align-items: flex-end; }
   .trip-filters--hidden {
     display: none; }
 
